ocaml/testsuite/tests/parse-errors/bigarray_index_labels.compilers.reference
File "bigarray_index_labels.ml", line 13, characters 14-25:
13 | my_big_array.{~~(1, ~y:2)} <- 1.5;;
                   ^^^^^^^^^^^
Error: Bigarray indices cannot be labeled
